tests/errors/preprocessor/arithmetic_operations_must_be_in_eval.c
#if 1 + 1 / 2 == 3
#endif

void main()
{
 
}
